--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,4 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: rizkima/rui@v1
-        token: ${{ secrets.PAT }}
-
+      - uses: rzkmak/rui@v1
