--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
         uses: actions/checkout@v2
       - uses: rzkmak/rui@v1
         env:
-          TELEGRAM_TOKEN: ${secrets.TELEGRAM_TOKEN}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
