--- a/rss.yaml
+++ b/rss.yaml
@@ -3,12 +3,12 @@
   custom_message: ""
   chat_id: "rsstotelegramdev"
 
-- url: "https://www.jawapos.com/ekonomi/feed/"
-  title: "JawaPos | Ekonomi"
-  custom_message: ""
-  chat_id: "rsstotelegramdev"
+# - url: "https://www.jawapos.com/ekonomi/feed/"
+#   title: "JawaPos | Ekonomi"
+#   custom_message: ""
+#   chat_id: "rsstotelegramdev"
 
-- url: "https://www.cnnindonesia.com/ekonomi/rss"
-  title: "CNBC | Ekonomi"
-  custom_message: ""
-  chat_id: "rsstotelegramdev"
+# - url: "https://www.cnnindonesia.com/ekonomi/rss"
+#   title: "CNBC | Ekonomi"
+#   custom_message: ""
+#   chat_id: "rsstotelegramdev"
